@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase
 
 {{$NEXT}}
+          - Add Crypt::Passphrase::System
 
 0.010     2023-03-14 23:04:53+01:00 Europe/Amsterdam
           - Add @CARP_NOT handler to import
